@@ -6,6 +6,12 @@ Not yet released - available from CVS or in the latest snapshot:
 
 Enhancements: 
 
+Look an Feel Plugin:
+  * Made Nimbus look and feel available (needs at least JDK/JRE 1.6.0_10)
+  * Made Metal look and feel with Ocean theme the default (used at first start up).
+  * Added warning message that look and feels other than Metal may cause perfomance and/or functional problems
+
+
 Updated Italian translation (Ivo Neri), Chinese translation (xpdz)
 
 New user interface layout: Tabbed layout
